--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,8 @@ body {
 }
 
 model-viewer {
-  width: 100%;
-  height: 90%;
+  width: 100vw;
+  height: 80vh;
   background-color: #313131;
 }
 
@@ -42,32 +42,32 @@ model-viewer {
 
 .Hotspot {
   background: #fff;
-  border-radius: 32px;
+  border-radius: 12px;
   border: 0;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
   box-sizing: border-box;
   cursor: pointer;
-  height: 24px;
+  height: 12px;
   padding: 8px;
   position: relative;
   transition: opacity 0.3s;
-  width: 24px;
+  width: 12px;
 }
 
 .Hotspot:not([data-visible]) {
   background: transparent;
   border: 4px solid #fff;
   box-shadow: none;
-  height: 32px;
+  height: 12px;
   pointer-events: none;
-  width: 32px;
+  width: 12px;
 }
 
 .Hotspot:focus {
   border: 4px solid rgb(255, 0, 76);
-  height: 32px;
+  height: 12px;
   outline: none;
-  width: 32px;
+  width: 12px;
 }
 
 .Hotspot > * {
@@ -79,7 +79,7 @@ model-viewer {
   background: #ffffff;
   color: rgba(0, 0, 0, 0.8);
   display: block;
-  font-family: Futura, Helvetica Neue, sans-serif;
+  font-family: Arial, Helvetica, sans-serif
   font-size: 15px;
   font-weight: 700;
   left: calc(100% + 1em);
