--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,6 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
-  
   background-color: #000000;
 }
 
@@ -23,22 +22,7 @@ model-viewer {
 }
 
 .Button {
-  background: #fff;
-  border-radius: 32px;
-  border: 0;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
-  box-sizing: border-box;
-  color: #000;
-  cursor: pointer;
-  font-family: Futura, Helvetica Neue, sans-serif;
-  font-size: 15px;
-  font-weight: 700;
-  height: 48px;
-  padding: 0 16px;
-  position: absolute;
-  top: 16px;
-  left: 16px;
-  transition: opacity 0.3s;  
+  background-color: aqua;
 }
 
 .Hotspot {
@@ -65,10 +49,7 @@ model-viewer {
 }
 
 .Hotspot:focus {
-  border: 4px solid rgb(255, 0, 76);
-  height: 12px;
-  outline: none;
-  width: 12px;
+  background-color: rgb(255, 0, 51);
 }
 
 .Hotspot > * {
@@ -149,7 +130,7 @@ model-viewer {
   padding: 0px 16px 0px 40px;
   font-family: Roboto Regular, Helvetica Neue, sans-serif;
   font-size: 14px;
-  color:#4285f4;
+  color:rgb(0, 0, 255);
   height: 36px;
   line-height: 36px;
   border-radius: 18px;
@@ -165,7 +146,7 @@ model-viewer {
 }
 
 #ar-button:focus-visible {
-  outline: 1px solid #4285f4;
+  outline: 1px solid rgb(0, 0, 255);
 }
 
 @keyframes circle {
