--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ model-viewer {
   background: #ffffff;
   color: rgba(0, 0, 0, 0.8);
   display: block;
-  font-family: Arial, Helvetica, sans-serif
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
   font-weight: 700;
   left: calc(100% + 1em);
