--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,16 @@ model-viewer {
   transition: width 0.3s;
 }
 
+.controls {
+  font-family: Arial, sans-serif;
+  color: white;
+  text-transform: uppercase;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
 #cc-xr {
   max-height: 50px;
   margin-right: 20px;
